--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
   </head>
   <body>
     <h1>Don't know what to cook today?</h1>
-    <h2>Insert your favorite indegrident and get your italian recipe</h2>
+    <h2>
+      Insert your favorite ingredient and get your italian recipe right now
+    </h2>
 
-    <script src="src/script.js"></script>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/CsengeOnCode" target="_blank">Csenge Barna</a>
+      and is open-sourced on
+      <a
+        href="https://github.com/CsengeOnCode/AI-recipe-generator"
+        target="_blank"
+        >GitHub</a
+      >
+      and hosted on
+      <a href="https://italian-recipe-generator.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
+
+  <script src="src/script.js"></script>
 </html>
