Added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -7,10 +7,31 @@
     <title>Recipe generator</title>
   </head>
   <body>
-    <h1>Don't know what to cook today?</h1>
-    <h2>
-      Insert your favorite ingredient and get your italian recipe right now
-    </h2>
+    <header>
+      <h1>Don't know what to cook today?</h1>
+      <h2>
+        Insert your favorite ingredient and get your new italian recipe right
+        now 🍝
+      </h2>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Write one ingredient..."
+          autofocus
+          required
+        />
+        <input type="submit" value="Generate recipe" />
+      </form>
+
+      <div>
+        Tomato <br />
+        Basil <br />
+        Pasta
+      </div>
+    </main>
 
     <footer>
       This AI project was coded by
