Added the styling to the project

--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
     <header>
       <h1>Don't know what to cook today?</h1>
       <h2>
-        Insert your favorite ingredient and get your new italian recipe right
-        now 🍝
+        Insert your favorite ingredient and get your new italian recipe 🍝
       </h2>
     </header>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Write one ingredient..."
-          autofocus
-          required
-        />
-        <input type="submit" value="Generate recipe" />
-      </form>
+    <div class="container">
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Write one ingredient..."
+            autofocus
+            required
+            class="prompt"
+          />
+          <input type="submit" value="Generate recipe" class="button" />
+        </form>
 
-      <div>
-        Tomato <br />
-        Basil <br />
-        Pasta
-      </div>
-    </main>
-
+        <div class="poem">
+          Tomato <br />
+          Basil <br />
+          Pasta
+        </div>
+      </main>
+    </div>
     <footer>
       This AI project was coded by
       <a href="https://github.com/CsengeOnCode" target="_blank">Csenge Barna</a>
